# PcShop

./: .dockerignore  .env  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
FirstApp/: admin.py  apps.py  models.py  urls.py  views.py
FirstApp/migrations/: 0001_initial.py  0002_alter_news_options_alter_news_content_and_more.py  0003_category_news_category.py
FirstApp/templates/FirstApp/: index.html
Learn/: settings.py  urls.py
authentication/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
authentication/management/commands/: create_admin.py
authentication/templates/authentication/: base.html  login.html  profile.html  register.html
authentication/views/: authentication.py
backend/: settings.py  urls.py
catalog/: models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: index.html
catalog/templates/catalog/computers/: pc_catalog.html
catalog/views/: __init__.py  computers.py
core/templates/: base.html
main/: urls.py
main/templates/main/: index.html
static/css/: bootstrap.5.1.1.min.css  style.css
