[tool.poetry]
name = "PcShop"
version = "0.1.0"
description = ""
authors = ["DenKlyzi <denis.zinovkin234@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
Django = "^5.1.6"
pillow = "^11.1.0"
environs = "^14.1.1"
psycopg2 = "^2.9.10"

[[tool.poetry.packages]]
include = "backend"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
